--- a/docs/style.css
+++ b/docs/style.css
@@ -480,7 +480,7 @@ code {
 }
 
 .about-info {
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   justify-content: space-around;
   min-height: 40rem;
