minor HTML updates

--- a/docs/style.css
+++ b/docs/style.css
@@ -252,7 +252,7 @@ code {
 }
 
 /* portfolio section top bar */
-.content-selector-container {
+.file-tab-container {
   justify-self: flex-start;
   width: min-content;
 
